# timeoracle

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: daemon-release.yml  daemon-tests.yml  server-tests.yml
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/api/: activity.ts  auth.ts  chat.ts  client.ts  daySummary.ts  integrations.ts  productivityCurve.ts  settings.ts  timeline.ts
client/src/assets/: main.css
client/src/components/: AppLayout.vue  CategoryBreakdownChart.vue  ChatPanel.vue  DaemonStatus.vue  LogoIcon.vue  ProductivityCurve.vue  TimeGridEvent.vue  TimelineEntryForm.vue
client/src/components/integrations/: TelegramCard.vue
client/src/composables/: useDayAnalytics.ts  usePolling.ts
client/src/constants/: categories.ts  palette.ts
client/src/i18n/: en.ts  guide-en.ts  guide-ru.ts  index.ts  ru.ts
client/src/plugins/: sessionLines.ts
client/src/router/: index.ts
client/src/stores/: activity.ts  auth.ts  chat.ts  integrations.ts  theme.ts  timeline.ts
client/src/types/: activity.ts  auth.ts  chat.ts  daySummary.ts  integrations.ts  productivityCurve.ts  settings.ts  timeline.ts
client/src/utils/: dayBoundary.ts
client/src/views/: ActivityView.vue  DashboardView.vue  LandingView.vue  LoginView.vue  MetricsGuideView.vue  SettingsView.vue  TimelineView.vue
daemon/: CLAUDE.md  Cargo.toml  build.rs
daemon/pkg/: digitalgulag-daemon.desktop  digitalgulag-daemon.service  timeoracle-daemon.service
daemon/pkg/macos/: Info.plist
daemon/pkg/macos/scripts/: postinstall
daemon/src/: auth.rs  buffer.rs  cli.rs  config.rs  engine.rs  error.rs  events.rs  lib.rs  main.rs  service.rs  sync.rs  tray.rs
daemon/src/capture/: idle.rs  linux_audio.rs  linux_url.rs  linux_wayland.rs  linux_x11.rs  macos.rs  macos_audio.rs  mod.rs
daemon/tests/common/: mod.rs
daemon/tests/integration/: buffer_sync.rs  capture_linux.rs  capture_macos.rs  mod.rs
docs/: productivity-metrics.md
nginx/: nginx.conf  nginx.dev.conf
openclaw/: README.md  skill.md
scripts/: init-langfuse-db.sh
server/: .env.example  Dockerfile  pyproject.toml  requirements.txt  startup.sh
server/alembic/versions/: 0b1dba83b99a_drop_activity_sessions.py  7c420bc77127_add_overall_productivity_score_to_day_.py  a1b2c3d4e5f6_activity_events.py  b2c3d4e5f6a7_timeline_entries.py  d4e5f6a7b8c9_add_icon_to_activity_sessions.py  e5f6a7b8c9d0_add_session_config_to_users.py  f6a7b8c9d0e1_add_chats.py  g7b8c9d0e1f2_drop_chats_date_column.py  h8c9d0e1f2g3_add_user_integrations.py  i9d0e1f2g3h4_add_agent_memories.py  j0e1f2g3h4i5_add_day_summaries.py  k1f2g3h4i5j6_add_focus_and_depth_metrics.py  l2g3h4i5j6k7_drop_category_type_metrics.py  m3h4i5j6k7l8_add_productivity_curve.py
server/scripts/: create_user.py  inspect_timeline.py  make_superuser.py  rebuild_sessions.py
server/src/: main.py
server/src/agent/: agent.py  deps.py  prompts.py  scheduler.py  tools.py
server/src/api/: activity.py  activity_sessions.py  agent_memories.py  chat.py  day_summaries.py  integrations.py  productivity_curve.py  timeline.py  users.py
server/src/core/: auth.py  config.py
server/src/models/postgres/: __init__.py  activity_events.py  activity_sessions.py  agent_memories.py  chats.py  day_summaries.py  integration_connect_tokens.py  productivity_points.py  timeline_entries.py  user_integrations.py  users.py
server/src/repositories/: activity_events.py  activity_sessions.py  agent_memories.py  chats.py  day_summaries.py  integrations.py  productivity_points.py  timeline_entries.py  users.py
server/src/schemas/: activity_events.py  activity_sessions.py  agent_memories.py  chat.py  day_summaries.py  integrations.py  productivity_points.py  timeline_entries.py  users.py
server/src/services/: activity_session_generator.py  category_utils.py  day_boundary.py  day_summary_computer.py  day_summary_service.py  icon_resolver.py  narrative_generator.py  productivity_score.py  telegram.py
server/tests/: conftest.py  test_activity.py  test_activity_session_generator.py  test_activity_sessions_api.py  test_chat_api.py  test_chat_repository.py  test_day_summaries_api.py  test_icon_resolver.py  test_productivity_curve_api.py  test_session_config_api.py  test_timeline.py  test_timeline_bulk.py
server/tests/unit/: conftest.py  test_agent_prompts.py  test_agent_tools.py  test_category_utils.py  test_day_boundary.py  test_day_summary_computer.py  test_productivity_score.py  test_session_day_boundary.py
