[package]
name = "timeoracle-daemon"
version = "0.1.0"
edition = "2021"
description = "TimeOracle activity tracking daemon"

[lib]
name = "timeoracle_daemon"
path = "src/lib.rs"

[[bin]]
name = "timeoracle-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rpassword = "7"
user-idle = "0.6"
tray-icon = "0.19"
muda = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
gtk = { version = "0.18", package = "gtk", features = ["v3_24"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSRunLoop", "NSDate"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "libc", "NSApplication"] }
objc2-core-graphics = { version = "0.3", features = ["CGWindow"] }
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFArray", "CFDictionary", "CFNumber"] }

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
tokio-test = "0.4"
axum = "0.7"

[features]
default = []

[package.metadata.deb]
maintainer = "TimeOracle"
section = "utils"
priority = "optional"
depends = "libgtk-3-0, libxss1, libxdo3"
assets = [
    ["target/release/timeoracle-daemon", "usr/bin/", "755"],
    ["pkg/timeoracle-daemon.service", "usr/lib/systemd/user/", "644"],
]
