[package]
name = "digitalgulag-daemon"
version = "0.1.0"
edition = "2021"
description = "digitalgulag activity tracking daemon"

[lib]
name = "digitalgulag_daemon"
path = "src/lib.rs"

[[bin]]
name = "digitalgulag-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rpassword = "7"
user-idle = "0.6"
tray-icon = "0.19"
muda = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
gtk = { version = "0.18", package = "gtk", features = ["v3_24"] }
mpris = { version = "2.0", optional = true }
pulsectl-rs = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSRunLoop", "NSDate", "NSObjCRuntime", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace", "NSRunningApplication", "libc",
    "NSApplication", "NSEvent",
    "NSWindow", "NSView", "NSTextField", "NSColor", "NSFont",
    "NSScreen", "NSButton", "NSSecureTextField", "NSControl",
] }
objc2-core-graphics = { version = "0.3", features = ["CGWindow"] }
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFArray", "CFDictionary", "CFNumber"] }

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
tokio-test = "0.4"
axum = "0.7"

[features]
default = ["audio"]
audio = ["mpris", "pulsectl-rs"]

[package.metadata.deb]
maintainer = "digitalgulag"
section = "utils"
priority = "optional"
depends = "libgtk-3-0, libxss1, libxdo3, libpulse0"
assets = [
    ["target/release/digitalgulag-daemon", "usr/bin/", "755"],
    ["pkg/digitalgulag-daemon.service", "usr/lib/systemd/user/", "644"],
    ["pkg/digitalgulag-daemon.desktop", "usr/share/applications/", "644"],
    ["assets/icon.png", "usr/share/icons/hicolor/128x128/apps/digitalgulag-daemon.png", "644"],
]
